[UNIONVMS-4472] collapse/expand email section and correct handling of password field

--- a/unionvms-web-2/src/angular/app/features/subscriptions/subscription-form/subscription-form.component.scss
+++ b/unionvms-web-2/src/angular/app/features/subscriptions/subscription-form/subscription-form.component.scss
@@ -112,6 +112,7 @@ fieldset {
 .password-icon {
   font-size: 27px;
   color: $light-sky-blue ;
+  cursor: pointer;
 }
 
 .email-plus-icon {
